# mimi-journey

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_init_postgis.py  002_create_users.py  003_create_place_cache.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  auth.py  calendar.py  places.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  redis.py  security.py
backend/app/models/: __init__.py  base.py  enums.py  place_cache.py  user.py
backend/app/schemas/: __init__.py  place.py  user.py
backend/app/services/: auth_service.py  calendar_service.py  maps_service.py
backend/tests/unit/: test_auth_service.py  test_calendar_service.py  test_enums.py  test_exceptions.py  test_maps_service.py  test_redis.py  test_schemas.py  test_security.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useAuth.ts  useDayPlan.ts
frontend/src/pages/: LoginPage.tsx  PlannerPage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: authStore.ts
frontend/src/types/: index.ts
frontend/tests/components/: CalendarEventList.test.tsx  LoginButton.test.tsx
frontend/tests/hooks/: useDayPlan.test.ts
frontend/tests/services/: api.test.ts
specs/001-mvp-travel-planner/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+10 files in other folders)
